<resources>
    <string name="app_name">BancoUTN</string>
    <string name="textoInformativoPantalla1">Para constituir tu plazo fijo necesitamos que nos proveas algunos datos.</string>
    <string name="titulo">Banco UTN Santa Fe</string>
    <string name="tasa_efectiva_anual">Tasa Efectiva Anual</string>
    <string name="tasa_nominal_anual">Tasa Nominal Anual</string>
    <string name="capital_a_invertir">Capital a Invertir ($)</string>
    <string name="con_renovaci_n_autom_tica">Con renovación automática</string>
    <string name="plazo">Plazo:</string>
    <string name="capital">Capital: $</string>
    <string name="intereses_ganados">Intereses ganados: $</string>
    <string name="monto_total">Monto total: $</string>
    <string name="monto_total_anual">Monto total anual: $</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="cero">0</string>
    <string name="logo_de_la_facultad">Logo de la facultad</string>
    <string name="plazo_de_inversion">Plazo de inversión</string>
    <string name="_30_dias">30 Días</string>
    <string name="boton_aceptar">Aceptar</string>
</resources>